<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_24"
    android:backgroundTint="#F2F1F7"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/wix_madefor_display_bold"
        android:gravity="center"
        android:text="@string/update_available"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/wix_madefor_display_medium"
        android:gravity="center"
        android:text="@string/update_message"
        android:textColor="@color/neutral_50"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_later"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_radius_20"
            android:fontFamily="@font/wix_madefor_display_bold"
            android:text="@string/update_later"
            android:textColor="@color/base_black"
            android:textSize="14dp"
            app:backgroundTint="#FDFDFD" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_radius_20"
            android:fontFamily="@font/wix_madefor_display_bold"
            android:text="@string/update_now"
            android:textColor="@color/gray"
            android:textSize="12dp"
            app:backgroundTint="@color/primary_primary" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_radius_20"
        android:fontFamily="@font/wix_madefor_display_bold"
        android:text="@string/update_now"
        android:textColor="#FDFDFD"
        android:textSize="14sp"
        android:visibility="gone"
        app:backgroundTint="@color/primary_primary" />
</LinearLayout>
