<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_rounded"
    android:padding="20dp"
    android:layout_margin="20dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_no_internet" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        android:textColor="@color/base_black"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_no_internet"
        android:textColor="@color/gray_500"
        android:textSize="14sp"
        android:lineHeight="20sp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_retry"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/retry"
        android:textAllCaps="false"
        android:gravity="center"
        android:background="@drawable/bg_button_rounded"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"/>

</LinearLayout>
</FrameLayout>

